<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_border">

    <TextView
        android:id="@+id/textViewSettingsTitle"
        android:layout_width="300sp"
        android:layout_height="60sp"
        android:layout_marginTop="40sp"
        android:shadowColor="@color/blue"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="160sp"
        android:layout_height="45sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="16sp"
        android:text="@string/currency"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingsTitle" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="150sp"
        android:layout_height="45sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCurrency"
        app:layout_constraintTop_toBottomOf="@+id/textViewSettingsTitle">

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/spinner_border" />

        <ImageView
            android:id="@+id/imageViewDropdownArrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/spinner_dropdown_arrow"
            app:srcCompat="@mipmap/drop" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/btnBackSettings"
        android:layout_width="150sp"
        android:layout_height="70sp"
        android:background="@drawable/spinner_border"
        android:onClick="backSettings"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCurrency" />

</androidx.constraintlayout.widget.ConstraintLayout>